# swig-examples

./: .gitignore  README.md
cs/MockDemoExe/: MockDemoExe.csproj  TestMock.cs
cs/Win32demo/: Makefile  Mock.h  MockDemo.sln  MockDemoCppDll.vcxproj  MockDemoExe.csproj  MockDemoWrap.csproj
cs/arrays/: Makefile  runme.cs  test.c  test.h  test.i
cs/arrayscpp/: Makefile  test.h  test.i
cs/example/: Makefile  example.c  example.h  example.i  runme.cs
cs/pair/: README.md  test.h  test.i
java/bytearray/: Makefile  README.md  mymodule.c  mymodule.i  run.java  ubyte.i
java/cmake/: CMakeLists.txt  native-interface.i  simple-methods.c  simple-methods.h
java/directorpoly/: JCollisionListener.java  JGameObject.java  Makefile  main.java  test.hh  test.i
java/strings0/: Beverage.java  Makefile  example.c  example.h  example.i  main.java  mynative.c  runme.java
java/twoways0/: c_backend.h  c_backend.i
java/twoways1/: JavaFrontend.java  Makefile  README.md  c_backend.cpp  c_backend.i
java/uint8_vector/: build.sh  run.java  test.i
javascript/cmake/: CMakeLists.txt  binding.gyp  challenge.cxx  challenge.h  challenge.i
javascript/example/: Makefile  example.cxx  example.h  node.js
javascript/example1/: build.sh  node.js
javascript/example2/: Makefile  binding.gyp  example.cpp  example.h  package-lock.json  package.json  run.js
javascript/shapes/: Makefile  example.cxx  example.h  node.js
languages/: Makefile  example.c  main.java  runme.cs  test.pl  test.py  test.tcl
python/abstract_c/: build64.bat  foo.c  foo.cpp  foo.h  foo.i  foo.py  setup.py  test.py
python/abstract_cpp/: bar.hpp  bar_impl.cpp  bar_impl.hpp  example.i  setup.py  test.py  test2.py
python/autodoc/: Doxyfile  Makefile  documentation.i  example.h  example.i  setup.py
python/c_to_python/: Makefile  test.c  test.py
python/c_to_python_to_c/: Makefile  main.cc  main1.cc  mycl.py  myif.h  myif.i
python/carray/: setup.py  test.cpp  test.h  test.i
python/chrarray/: example.i
python/debug/: Makefile  (+1 more)
(+52 files in other folders)
