
CMAKE_MINIMUM_REQUIRED(VERSION 3.19)

FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
FIND_PACKAGE(Java REQUIRED)
INCLUDE(UseSWIG)
INCLUDE(UseJava)

SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_BINARY_DIR}/java")
SWIG_ADD_MODULE(Native java "native-interface.i"
  "simple-methods.h" "simple-methods.c"
  )
TARGET_INCLUDE_DIRECTORIES(Native
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
  PRIVATE ${JAVA_INCLUDE_PATH}
  PRIVATE ${JAVA_INCLUDE_PATH2})

FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/classes")
ADD_CUSTOM_COMMAND(TARGET Native POST_BUILD
  COMMAND "${Java_JAVAC_EXECUTABLE}" -d classes java/*.java
  COMMAND "${Java_JAR_EXECUTABLE}" -cfM Native.jar -C classes .
  )
# Store Path to native JAR in variable:
SET(NATIVE_JAR "${CMAKE_CURRENT_BINARY_DIR}/Native.jar")

ADD_JAR(ConsoleApp
  SOURCES "NativeInvoker.java"
  INCLUDE_JARS ${NATIVE_JAR})
SET(CMAKE_JAVA_COMPILE_FLAGS "-source" "1.8" "-target" "1.8")


ADD_CUSTOM_COMMAND(TARGET ConsoleApp POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Native> ${CMAKE_CURRENT_BINARY_DIR})
